--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
   width: 100vw;
   height: 100vh;
   grid-template-columns: 33vw 32vw 35vw;
-  grid-template-rows: 14.26vh 12.052vh 27.048vh 9.568vh 43.608vh; }
+  grid-template-rows: 13.984vh 11.868vh 20.792vh 9.384vh 42.872vh; }
 
 time {
   grid-column: 2 / 3;
@@ -34,7 +34,8 @@ time {
 .olin-header {
   grid-column: 1 / 2;
   grid-row: 1;
-  background-color: rgba(18, 29, 46, 0.3); }
+  background-color: rgba(18, 29, 46, 0.3);
+  padding-left: 2.65vw; }
   .olin-header h1 {
     text-transform: capitalize;
     font-weight: normal;
@@ -48,59 +49,79 @@ time {
   background-color: rgba(18, 29, 46, 0.3);
   margin: 0;
   font-size: 3.551vw;
-  padding-bottom: 2.76vh; }
+  padding-bottom: 2.76vh;
+  padding-left: 2.65vw; }
 
 .olin-laptops__availability {
   grid-column: 1 / 3;
   grid-row: 3;
-  background-color: pink;
+  background-color: rgba(18, 29, 46, 0.3);
+  padding-left: 2.65vw;
   font-size: 2.332vw;
   color: #fff;
   display: flex; }
-  .olin-laptops__availability div {
-    background-color: red;
+  .olin-laptops__availability p {
     flex-grow: 1;
     flex-shrink: 1; }
-  .olin-laptops__availability .icon-laptop {
-    color: #fff;
-    padding-right: 0.424vw; }
-  .olin-laptops__availability .device-type__info--count {
-    color: #3C96D2;
-    border-radius: 50%;
-    width: 4.24vw;
-    height: 4.24vw;
-    line-height: 4.24vw;
-    background-color: #fff;
-    text-align: center;
-    display: inline-block;
-    float: left;
-    margin-right: 0.53vw; }
-  .olin-laptops__availability .available {
-    vertical-align: middle;
-    color: #3C96D2;
-    display: block;
-    margin-top: -0.92vh; }
-  .olin-laptops__availability .unavailable {
-    vertical-align: middle;
-    color: #D0011B;
-    display: block;
-    margin-top: -0.92vh; }
 
 .olin-phone-chargers {
   grid-column: 1 / 3;
   grid-row: 4;
-  background-color: purple;
+  background-color: rgba(18, 29, 46, 0.3);
+  font-size: 3.551vw;
+  padding-bottom: 2.76vh;
+  padding-left: 2.65vw;
   margin: 0; }
 
 .olin-phone-chargers__availability {
   grid-column: 1 / 3;
   grid-row: 5;
-  background-color: blue;
+  background-color: rgba(18, 29, 46, 0.3);
+  padding-left: 2.65vw;
+  font-size: 2.332vw;
+  color: #fff;
   display: flex;
   flex-flow: row wrap; }
-  .olin-phone-chargers__availability div {
-    background-color: red;
-    width: 50%; }
+  .olin-phone-chargers__availability p {
+    width: 50%;
+    height: auto;
+    margin: 0; }
+
+.device-count {
+  color: #3C96D2;
+  border-radius: 50%;
+  width: 4.24vw;
+  height: 4.24vw;
+  line-height: 4.24vw;
+  background-color: #fff;
+  text-align: center;
+  display: inline-block;
+  margin-right: 0.53vw; }
+
+.icon-laptop {
+  color: #fff;
+  padding-right: 0.424vw;
+  display: inline-block; }
+
+.icon-charger {
+  color: #fff;
+  padding-right: 0.424vw;
+  display: inline-block; }
+
+.available {
+  vertical-align: middle;
+  color: #3C96D2;
+  display: inline-block;
+  margin-top: -1.288vh; }
+
+.unavailable {
+  vertical-align: middle;
+  color: #D0011B;
+  margin-top: -0.92vh; }
+
+.olin-phone-chargers__availability .available {
+  padding-left: 5.088vw;
+  display: block; }
 
 /**
  ** URIS CONTENT
