--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,28 +1,23 @@
-  // ==========
-  // CSS VARIABLES
-  // ==========
-  $bg-dark-blue: rgba(18,29,46,.3);
-  $bg-medium-blue: rgba(33,43,57,.3);
-  $light-blue: #3C96D2;
-  $red: #D0011B;
-
-  // Landscpae width scale factor
-  $lw: 0.053vw;
-
-  // Landscpae height scale factor
-  $lh: 0.092vh;
-
-  // Portrait width scale factor
-  $pw: 0.092vw;
-
-  // Portrait height scale factor
-  $ph: 0.053vh;
-
+// ==========
+// CSS VARIABLES
+// ==========
+$bg-dark-blue: rgba(18,29,46,.3);
+$bg-medium-blue: rgba(33,43,57,.3);
+$light-blue: #3C96D2;
+$red: #D0011B;
+// Landscpae width scale factor
+$lw: 0.053vw;
+// Landscpae height scale factor
+$lh: 0.092vh;
+// Portrait width scale factor
+$pw: 0.092vw;
+// Portrait height scale factor
+$ph: 0.053vh;
 
 * {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-  }
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
 
 body {
   color: #fff;
@@ -41,7 +36,7 @@ body {
   width: 100vw;
   height: 100vh;
   grid-template-columns: 33vw 32vw 35vw;
-  grid-template-rows: 155*$lh 131*$lh 294*$lh 104*$lh 474*$lh;
+  grid-template-rows: 152*$lh 129*$lh 226*$lh 102*$lh 466*$lh;
 }
 
 time {
@@ -54,15 +49,14 @@ time {
   padding-right: 20 * $lw;
   padding-top: 30 * $lh;
 }
-
 /**
  ** OLIN CONTENT
  **/
-
 .olin-header {
   grid-column: 1 / 2;
   grid-row: 1;
   background-color: $bg-dark-blue;
+  padding-left: 50 * $lw;
 
   h1 {
     text-transform: capitalize;
@@ -80,83 +74,95 @@ time {
   margin: 0;
   font-size: 67 * $lw;
   padding-bottom: 30 * $lh;
+  padding-left: 50 * $lw;
 }
 
 .olin-laptops__availability {
   grid-column: 1 / 3;
   grid-row: 3;
-  background-color: pink;
-
+  background-color: $bg-dark-blue;
+  padding-left: 50 * $lw;
   font-size: 44 * $lw;
   color: #fff;
-
   display: flex;
 
-  div {
-    background-color: red;
+  p {
     flex-grow: 1;
     flex-shrink: 1;
   }
-
-    .icon-laptop {
-      color: #fff;
-      padding-right: 8 * $lw;
-    }
-
-    .device-type__info--count {
-      color: $light-blue;
-      border-radius: 50%;
-      width: 80 * $lw;
-      height: 80 * $lw;
-      line-height: 80 * $lw;
-      background-color: #fff;
-      text-align: center;
-      display: inline-block;
-      float: left;
-      margin-right: 10 * $lw;
-    }
-
-    .available {
-      vertical-align: middle;
-      color: $light-blue;
-      display: block;
-      margin-top: -10 * $lh;
-    }
-
-    .unavailable {
-      vertical-align: middle;
-      color: $red;
-      display: block;
-      margin-top: -10 * $lh;
-    }
-
 }
 
 .olin-phone-chargers {
   grid-column: 1 / 3;
   grid-row: 4;
-  background-color: purple;
+  background-color: $bg-dark-blue;
+  font-size: 67 * $lw;
+  padding-bottom: 30 * $lh;
+  padding-left: 50 * $lw;
   margin: 0;
 }
 
 .olin-phone-chargers__availability {
   grid-column: 1 / 3;
   grid-row: 5;
-  background-color: blue;
-
+  background-color: $bg-dark-blue;
+  padding-left: 50 * $lw;
+  font-size: 44 * $lw;
+  color: #fff;
   display: flex;
   flex-flow: row wrap;
 
-  div {
-    background-color: red;
+  p {
     width: 50%;
+    height: auto;
+    margin: 0;
   }
 }
 
+.device-count {
+  color: $light-blue;
+  border-radius: 50%;
+  width: 80 * $lw;
+  height: 80 * $lw;
+  line-height: 80 * $lw;
+  background-color: #fff;
+  text-align: center;
+  display: inline-block;
+  margin-right: 10 * $lw;
+}
+
+.icon-laptop {
+  color: #fff;
+  padding-right: 8 * $lw;
+  display: inline-block;
+}
+
+.icon-charger {
+  color: #fff;
+  padding-right: 8 * $lw;
+  display: inline-block;
+}
+
+.available {
+  vertical-align: middle;
+  color: $light-blue;
+  display: inline-block;
+  margin-top: -14 * $lh;
+}
+
+.unavailable {
+  vertical-align: middle;
+  color: $red;
+  margin-top: -10 * $lh;
+}
+
+.olin-phone-chargers__availability .available {
+  padding-left: 96 * $lw;
+  display: block;
+}
 /**
  ** URIS CONTENT
  **/
-
 .uris-header {
   grid-column: 3;
   grid-row: 1;
