--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,7 +36,7 @@ body {
   width: 100vw;
   height: 100vh;
   grid-template-columns: 33vw 32vw 35vw;
-  grid-template-rows: 152*$lh 129*$lh 226*$lh 102*$lh 466*$lh;
+  grid-template-rows: 152*$lh 129*$lh 226*$lh auto 466*$lh;
 }
 
 time {
@@ -73,6 +73,7 @@ time {
   background-color: $bg-dark-blue;
   margin: 0;
   font-size: 67 * $lw;
+  font-weight: 400;
   padding-bottom: 30 * $lh;
   padding-left: 50 * $lw;
 }
@@ -88,7 +89,8 @@ time {
 
   p {
     flex-grow: 1;
-    flex-shrink: 1;
+    //flex-shrink: 1;
+    margin-top: 10 * $lh;
   }
 }
 
@@ -97,6 +99,7 @@ time {
   grid-row: 4;
   background-color: $bg-dark-blue;
   font-size: 67 * $lw;
+  font-weight: 400;
   padding-bottom: 30 * $lh;
   padding-left: 50 * $lw;
   margin: 0;
@@ -114,7 +117,7 @@ time {
 
   p {
     width: 50%;
-    height: auto;
+    //height: auto;
     margin: 0;
   }
 }
