--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+/**
+ ** VARIABLES
+ **/
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased; }
@@ -5,25 +8,27 @@
 body {
   color: #fff;
   background-color: #121D2E;
+  background: #121D2E url("../images/insignia.png") no-repeat bottom right;
   background-size: contain;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow: hidden; }
 
 .grid {
   display: grid;
   width: 100vw;
   height: 100vh;
   grid-template-columns: 33vw 32vw 35vw;
-  grid-template-rows: 13.984vh 11.868vh 20.792vh auto 42.872vh; }
+  grid-template-rows: 13.984vh 11.868vh 20.792vh 11.868vh auto; }
 
 time {
   grid-column: 2 / 3;
   grid-row: 1;
   background-color: rgba(18, 29, 46, 0.3);
   color: #fff;
-  font-size: 1.59vw;
+  font-size: 1.06vw;
   text-align: right;
   padding-right: 1.06vw;
   padding-top: 2.76vh; }
@@ -52,6 +57,9 @@ time {
   font-weight: 400;
   padding-bottom: 2.76vh;
   padding-left: 2.65vw; }
+  .olin-laptops .icon-laptop {
+    font-size: 4.77vw;
+    display: inline-block; }
 
 .olin-laptops__availability {
   grid-column: 1 / 3;
@@ -84,9 +92,14 @@ time {
   color: #fff;
   display: flex;
   flex-flow: row wrap; }
+  .olin-phone-chargers__availability .icon-charger {
+    padding-right: 0.424vw; }
   .olin-phone-chargers__availability p {
     width: 50%;
-    margin: 0; }
+    margin: 0.92vh 0 0; }
+    .olin-phone-chargers__availability p:nth-child(3), .olin-phone-chargers__availability p:nth-child(4) {
+      display: inline-block;
+      margin-top: -9.2vh; }
 
 .device-count {
   color: #3C96D2;
@@ -99,16 +112,6 @@ time {
   display: inline-block;
   margin-right: 0.53vw; }
 
-.icon-laptop {
-  color: #fff;
-  padding-right: 0.424vw;
-  display: inline-block; }
-
-.icon-charger {
-  color: #fff;
-  padding-right: 0.424vw;
-  display: inline-block; }
-
 .available {
   vertical-align: middle;
   color: #3C96D2;
@@ -118,10 +121,12 @@ time {
 .unavailable {
   vertical-align: middle;
   color: #D0011B;
+  display: inline-block;
   margin-top: -0.92vh; }
 
-.olin-phone-chargers__availability .available {
-  padding-left: 5.088vw;
+.olin-phone-chargers__availability .available,
+.olin-phone-chargers__availability .unavailable {
+  padding-left: 5.194vw;
   display: block; }
 
 /**
@@ -130,28 +135,82 @@ time {
 .uris-header {
   grid-column: 3;
   grid-row: 1;
-  background-color: red; }
+  background-color: rgba(33, 43, 57, 0.3);
+  padding-left: 2.65vw;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  padding-top: 0.92vh; }
+  .uris-header h1 {
+    text-transform: capitalize;
+    font-weight: normal;
+    font-size: 2.12vw;
+    padding-top: 4.6vh;
+    margin: 0; }
 
 .uris-laptops {
   grid-column: 3;
   grid-row: 2 / 3;
-  background-color: brown;
-  margin: 0; }
+  background-color: rgba(33, 43, 57, 0.3);
+  margin: 0;
+  font-size: 2.491vw;
+  font-weight: 400;
+  padding-bottom: 2.76vh;
+  padding-left: 2.65vw;
+  border-left: 1px solid rgba(255, 255, 255, 0.2); }
 
 .uris-laptops__availability {
   grid-column: 3;
   grid-row: 3 / 4;
-  background-color: yellow; }
+  background-color: rgba(33, 43, 57, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  margin-top: -2.76vh;
+  padding-left: 2.65vw;
+  font-size: 1.59vw;
+  color: #fff;
+  display: flex;
+  flex-flow: column wrap; }
+  .uris-laptops__availability .icon-charger {
+    padding-right: 0.424vw; }
+  .uris-laptops__availability .device-count {
+    width: 3.18vw;
+    height: 3.18vw;
+    line-height: 3.18vw;
+    margin-right: 0.53vw; }
+  .uris-laptops__availability p {
+    margin: 0 0 2.76vh; }
 
 .uris-phone-chargers {
   grid-column: 3;
   grid-row: 4 / 5;
-  background-color: green;
-  margin: 0; }
+  background-color: rgba(33, 43, 57, 0.3);
+  font-size: 2.491vw;
+  font-weight: 400;
+  padding-bottom: 2.76vh;
+  padding-left: 2.65vw;
+  margin: 0;
+  border-left: 1px solid rgba(255, 255, 255, 0.2); }
+  .uris-phone-chargers .icon-charger {
+    font-size: 2.12vw;
+    display: inline-block; }
 
 .uris-phone-chargers__availability {
   grid-column: 3;
   grid-row: 5;
-  background-color: orange; }
+  background-color: rgba(33, 43, 57, 0.3);
+  padding-left: 2.65vw;
+  font-size: 1.59vw;
+  color: #fff;
+  display: flex;
+  flex-flow: column wrap;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  margin-top: -2.76vh; }
+  .uris-phone-chargers__availability .icon-charger {
+    padding-right: 0.424vw; }
+  .uris-phone-chargers__availability .device-count {
+    width: 3.18vw;
+    height: 3.18vw;
+    line-height: 3.18vw;
+    margin-right: 0.53vw; }
+  .uris-phone-chargers__availability p {
+    margin: 0 0 2.76vh; }
 
 /*# sourceMappingURL=styles.css.map */
